// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package rpc;

import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc GetAccount(AddressReq)returns (Response) {
        option (google.api.http) = {
            post: "/v1/GetAccount"
            body: "*"
        };
    }
    rpc SendMessageRaw(SendMessageCodeReq)returns (Response) {
        option (google.api.http) = {
            post: "/v1/SendMessageRaw"
            body: "*"
        };
    }
    rpc GetMessage(HashReq)returns (Response) {
        option (google.api.http) = {
            post: "/v1/GetMessage"
            body: "*"
        };
    }
    rpc GetBlockHash(HashReq)returns (Response) {
        option (google.api.http) = {
            post: "/v1/GetBlockHash"
            body: "*"
        };
    }
    rpc GetBlockHeight(HeightReq)returns (Response) {
        option (google.api.http) = {
            post: "/v1/GetBlockHeight"
            body: "*"
        };
    }
    rpc LastHeight(NullReq)returns (Response) {
        option (google.api.http) = {
          post: "/v1/LastHeight"
          body: "*"
        };
    }
    rpc Confirmed(NullReq)returns (Response) {
        option (google.api.http) = {
          post: "/v1/Confirmed"
          body: "*"
        };
    }
    rpc GetMsgPool(NullReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/GetMsgPool"
        body: "*"
      };
    }
    rpc Candidates(NullReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/Candidates"
        body: "*"
      };
    }
    rpc GetCycleSupers(CycleReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/GetCycleSupers"
        body: "*"
      };
    }
    rpc GetSupersReward(CycleReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/GetSupersReward"
        body: "*"
      };
    }
    rpc Token(TokenAddressReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/Token"
        body: "*"
      };
    }
    rpc PeersInfo(NullReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/PeersInfo"
        body: "*"
      };
    }
    rpc LocalInfo(NullReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/LocalInfo"
        body: "*"
      };
    }

    rpc GenerateAddress(GenerateReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/GenerateAddress"
        body: "*"
      };
    }
    rpc GenerateTokenAddress(GenerateTokenReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/GenerateTokenAddress"
        body: "*"
      };
    }
    rpc CreateTransaction(TransactionReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/CreateTransaction"
        body: "*"
      };
    }
    rpc CreateToken(TokenReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/CreateToken"
        body: "*"
      };
    }
    rpc CreateCandidate(CandidateReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/CreateCandidate"
        body: "*"
      };
    }
    rpc CreateCancel(CancelReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/CreateCancel"
        body: "*"
      };
    }
    rpc CreateVote(VoteReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/CreateVote"
        body: "*"
      };
    }
    rpc SendTransaction(TransactionReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/SendTransaction"
        body: "*"
      };
    }
    rpc SendToken(TokenReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/SendToken"
        body: "*"
      };
    }
    rpc SendCandidate(CandidateReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/SendCandidate"
        body: "*"
      };
    }
    rpc SendCancel(CancelReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/SendCancel"
        body: "*"
      };
    }
    rpc SendVote(VoteReq)returns (Response) {
      option (google.api.http) = {
        post: "/v1/SendVote"
        body: "*"
      };
    }
}

message NullReq {
}

message AddressReq {
  string address = 1;
}

message TokenAddressReq {
  string token = 1;
}

message SendMessageCodeReq{
  bytes code = 1;
}

message HashReq{
  string hash = 1;
}

message HeightReq{
  uint64 height = 1;
}

message CycleReq{
  uint64 cycle = 1;
}

message GenerateReq{
  string network = 1;
  string publickey = 2;
}

message GenerateTokenReq{
  string network = 1;
  string address = 2;
  string abbr = 3;
}

message TransactionReq{
  string from = 1;
  string to = 2;
  string token = 3;
  string note = 4;
  uint64 amount = 5;
  uint64 fees = 6;
  uint64 timestamp = 7;
  uint64 nonce = 8;
  string signature = 9;
  string publickey = 10;
}

message TokenReq{
  string from = 1;
  string receiver = 2;
  string token = 4;
  string name = 5;
  string abbr = 6;
  bool increase = 7;
  uint64 amount = 8;
  uint64 fees = 9;
  uint64 timestamp = 10;
  uint64 nonce = 11;
  string signature = 12;
  string publickey = 13;
}

message CandidateReq{
  string from = 1;
  string p2pid = 2;
  uint64 fees = 3;
  uint64 timestamp = 4;
  uint64 nonce = 5;
  string signature = 6;
  string publickey = 7;
}

message CancelReq{
  string from = 1;
  uint64 fees = 2;
  uint64 timestamp = 3;
  uint64 nonce = 4;
  string signature = 5;
  string publickey = 6;
}

message VoteReq{
  string from = 1;
  string to = 2;
  uint64 fees = 3;
  uint64 timestamp = 4;
  uint64 nonce = 5;
  string signature = 6;
  string publickey = 7;
}

// The response message containing the greetings
message Response {
  int32 code = 1;
  bytes result = 2;
  string err = 3;
}
